added light dark

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inconsolata:wght@200..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Lexend&display=swap');
 
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
-.font2 {
-  font-family: 'Inconsolata', monospace;
+.outfit {
+  font-family: "Outfit", sans-serif;
 }
 
-.font3 {
-  font-family: "DM Serif Text", serif;
+.poppins {
+  font-family: "Poppins", sans-serif;
 }
+
+.prata {
+  font-family: "Prata", serif;
+}
+
+.lexend {
+  font-family: "Lexend", serif;
+}
+
+
 
 a.active hr {
   display: block;
